--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.mychess.mychess" >
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -34,6 +34,11 @@
 
         <service
             android:name=".GameService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
+        <service
+            android:name=".Servicio"
             android:enabled="true"
             android:exported="true" >
         </service>
