--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,23 +15,17 @@
             android:name=".Acceso"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
-
         </activity>
         <activity
             android:name=".Juego"
             android:label="@string/title_activity_juego"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".Amigos"
-            android:label="@string/title_activity_amigos"
-            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
 
         <service
@@ -44,6 +38,25 @@
             android:enabled="true"
             android:exported="true" >
         </service>
+
+        <activity
+            android:name=".AgregarAmigos"
+            android:label="@string/title_activity_agregar_amigos"
+            android:parentActivityName=".Amigos"
+            android:theme="@style/AppTheme.NoActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mychess.mychess.Amigos" />
+        </activity>
+        <activity
+            android:name=".Amigos"
+            android:label="@string/title_activity_amigos"
+            android:parentActivityName=".Juego"
+            android:theme="@style/AppTheme.NoActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mychess.mychess.Juego" />
+        </activity>
     </application>
 
 </manifest>
